Web Inspector: Sources: remove extra space above Breakpoints section when breakpoints are disabled https://bugs.webkit.org/show_bug.cgi?id=198933
Reviewed by Matt Baker.

* UserInterface/Views/DebuggerSidebarPanel.css:
(.sidebar > .panel.navigation.debugger .warning-banner):
* UserInterface/Views/SourcesNavigationSidebarPanel.css:
(.sidebar > .panel.navigation.sources > .content > .warning-banner):


Canonical link: https://commits.webkit.org/212910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246518 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/DebuggerSidebarPanel.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DebuggerSidebarPanel.css
@@ -56,7 +56,6 @@
     font-size: 11px;
 
     padding: 11px 6px;
-    margin-bottom: 6px;
 
     border-bottom: 1px solid var(--border-color);
     background-color: hsl(50, 100%, 94%);
