--- a/Source/WebInspectorUI/UserInterface/Views/SourcesNavigationSidebarPanel.css
+++ b/Source/WebInspectorUI/UserInterface/Views/SourcesNavigationSidebarPanel.css
@@ -54,7 +54,6 @@
 }
 
 .sidebar > .panel.navigation.sources > .content > .warning-banner {
-    margin-bottom: 6px;
     padding: 11px 6px;
     font-size: 11px;
     text-align: center;
